# Job_applier

./: .env.example  .gitignore  config.yaml  profile.yaml  pyproject.toml
docs/superpowers/plans/: 2026-06-15-auto-job-applier.md
docs/superpowers/specs/: 2026-06-15-auto-job-applier-design.md
src/job_applier/: __init__.py  __main__.py  accounts.py  application.py  browser.py  config.py  llm.py  notifications.py  prompt.py  runner.py  search.py
tests/: test_accounts.py  test_application.py  test_browser.py  test_config.py  test_llm.py  test_notifications.py  test_prompt.py  test_search.py
